# meshlights

./: .gitignore  README.md  animations.py  config.py  config.toml  engine.py  install-service.sh  pyproject.toml  screen.py
docs/: meshcore-path-matching.md  meshcore-rx-dormancy-1209.md  meshcore-rx-event-surface.md
utils/: dotstar_test.py  rx_logger.py  screen_debug.py  set_pnw_radio.py  sim.py
