[project]
name = "meshlights"
version = "0.1.0"
description = "Meshlights — drives an APA102 LED strip from live MeshCore RX events"
requires-python = ">=3.11"
dependencies = [
    "meshcore",
    "numpy",
    "adafruit-circuitpython-dotstar",
    "adafruit-blinka",
    "rpi-gpio",                 # blinka's GPIO backend on Raspberry Pi
    "adafruit-circuitpython-ssd1306>=2.12.24",
    "pillow>=12.2.0",
    "luma-oled>=3.15.0",
]

[tool.uv]
package = false
